pages/index.scss
// Importation des variables de thème.
@import "_colors";

main > a
{
	// Animation du logo GitHub.
	&:hover path:nth-of-type(2)
	{
		// Effet de survol.
		animation: octocat-wave 560ms ease-in-out;

		@media screen and (max-width: 768px)
		{
			// Désactivation de l'animation sur les
			//	écrans de petite taille.
			animation: none;
		}
	}

	svg
	{
		// Délimitation de la zone cliquable.
		clip-path: polygon(0 0, 100% 0, 100% 100%);

		@include themeColors()
		{
			fill: getThemedColor("primary");
			color: getThemedColor("background");
		}
	}

	@media screen and (max-width: 768px)
	{
		path:nth-of-type(2)
		{
			// Animation du logo GitHub au chargement
			//	de la page sur les écrans de petite taille.
			animation: octocat-wave 560ms ease-in-out;
		}
	}

	@keyframes octocat-wave
	{
		0% { transform: rotate(0); }
		20% { transform: rotate(-25deg); }
		40% { transform: rotate(10deg); }
		60% { transform: rotate(-25deg); }
		80% { transform: rotate(10deg); }
		100% { transform: rotate(0); }
	}
}

section:first-of-type
{
	// Informations sur le développeur.
	margin-top: 6rem;
	justify-content: space-between;

	@media screen and (max-width: 768px)
	{
		// Modification de l'apparence de la section sur les
		// 	écrans de petite taille.
		padding-bottom: 1rem;
		flex-direction: column;
	}

	h1
	{
		// Phrase d'accroche.
		display: flex;
		flex-basis: 50%;
		flex-direction: column;

		@media screen and (max-width: 768px)
		{
			// Réduction de la taille de la police de caractères
			//	sur les écrans de petite taille.
			width: 100%;
			font-size: 4rem;
		}

		@media screen and (max-width: 384px)
		{
			// Réduction de la taille de la police de caractères
			//	sur les écrans de très petite taille.
			font-size: 3rem;
		}

		span
		{
			// Prénom et nom du développeur.
			@include themeColors()
			{
				color: getThemedColor("primary");
			}
		}
	}

	article
	{
		// Conteneur du résumé.
		flex-basis: 40%;

		@media screen and (max-width: 768px)
		{
			// Modification des marges extérieures sur les
			//	écrans de petite taille.
			width: 100%;
			margin-top: 2.5rem;
		}

		p
		{
			// Résumé du développeur.
			margin: 0;
			font-size: 1.15rem;
		}

		button
		{
			// Bouton de téléchargement du CV.
			margin-top: 2rem;
		}
	}
}

section:nth-of-type(2) article
{
	// Conteneur des projets.
	width: 95%;
	margin: 2rem auto;
	padding: 2rem;
	display: flex;
	max-width: 1024px;
	text-align: center;
	align-items: center;
	border-radius: 1rem;
	justify-content: space-between;

	@include themeColors()
	{
		box-shadow: getThemedColor("container-shadow");
		background-color: getThemedColor("background-alt");
	}

	@media screen and (max-width: 1024px)
	{
		// Réduction de l'apparence du conteneur sur les
		//	écrans de taille moyenne.
		padding: 1.5rem;
		max-width: 450px;
		flex-direction: column;
	}

	> h2
	{
		// Titre de la section.
		@media screen and (max-width: 768px)
		{
			// Modification des marges du titre sur les
			//	écrans de petite taille.
			margin-bottom: 0;
		}
	}

	img
	{
		// Image de présentation du projet.
		border-radius: 0.5rem;

		@include themeColors()
		{
			border: 1px solid getThemedColor("foreground");
		}

		@media screen and (max-width: 1024px)
		{
			// Réduction des dimensions de l'image sur les
			//	écrans de taille moyenne.
			margin: 0 auto;
			max-width: 100%;
			max-height: 100%;
			margin-bottom: 2rem;
		}
	}

	div
	{
		// Conteneur des informations du projet.
		flex-basis: 50%;
		margin-left: 2rem;

		@media screen and (max-width: 1024px)
		{
			// Réduction de l'apparence du conteneur sur les
			//	écrans de taille moyenne.
			padding: 0;
			margin-left: 0;
		}

		p
		{
			// Description du projet.
			margin: 1.25rem 0;
		}

		ul
		{
			// Informations générales du projet.
			display: flex;
			flex-wrap: wrap;
			align-items: center;
			justify-content: center;

			&:first-of-type
			{
				// Technologies utilisées.
				margin: 0 auto;

				li
				{
					// Conteneur de chaque technologie.
					margin: 0.25rem 0.25rem;
					padding: 0.5rem 0.5rem;
					font-size: 0.85rem;
					font-weight: 700;
					border-radius: 5rem;

					@include themeColors()
					{
						color: getThemedColor("primary-alt");
						background-color: getThemedColor("primary-light");
					}
				}
			}

			&:last-of-type
			{
				// Liens vers le code source.
				margin-top: 1.25rem;

				svg
				{
					// Icône de chaque lien.
					width: 1.5rem;
					height: 1.5rem;
					padding: 0.5rem;
					border-radius: 50%;

					@include themeColors()
					{
						border: 0.2rem solid getThemedColor("primary");
					}

					&:not(:hover)
					{
						// État initial de l'icône (sans effet)
						@include themeColors()
						{
							color: getThemedColor("primary");
						}
					}
				}
			}
		}
	}
}

section:nth-of-type(3) article
{
	// Conteneur des compétences.
	gap: 1rem;
	margin: 0 auto;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	justify-content: center;

	&:first-of-type
	{
		// Conteneur des options de tri.
		margin-bottom: 3rem;
	}

	div
	{
		// Conteneur de chaque compétence.
		gap: 0.5rem;
		width: 9rem;
		height: 9rem;
		display: flex;
		overflow: hidden;
		position: relative;
		font-size: 0.85rem;
		font-weight: 500;
		align-items: center;
		border-radius: 1.5rem;
		flex-direction: column;
		justify-content: center;

		@include themeColors()
		{
			box-shadow: getThemedColor("container-shadow");
			background-color: getThemedColor("background-alt");
		}

		i
		{
			// Icônes des compétences.
			font-size: 3rem;
			margin-bottom: 0.25rem;
		}

		&::before
		{
			// État initial de l'animation.
			left: 0;
			width: 100%;
			height: 6px;
			bottom: 0;
			content: "";
			position: absolute;
			transform: scaleX(0);
			transition: transform 200ms linear;
			border-radius: 1.5;

			@include themeColors()
			{
				background-color: getThemedColor("primary-alt");
			}
		}

		&:hover::before
		{
			// Animation de survol.
			transform: scaleX(1);
		}
	}
}

section:last-of-type ul
{
	// Liens vers les réseaux sociaux.
	flex-wrap: wrap;
	justify-content: center;

	button, a
	{
		// Boutons vers les réseaux sociaux.
		display: flex;
		margin-top: 0.3rem;
		align-items: center;
		margin-right: 0.5rem;

		svg
		{
			// Icônes des réseaux sociaux.
			height: 1rem;
			margin-right: 0.25rem;
		}
	}
}

